--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,19 @@
 			<version>1.2.62</version>
 		</dependency>
 
-	</dependencies>
+		<!--引入redis相关依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.3.2.RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
