--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-# 配置neo4j
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=neo4j_pw
-spring.data.neo4j.uri=bolt://localhost:7687
+###############################################################
+#配置mongodb
+################################################################
+spring.data.mongodb.uri=mongodb://localhost:27017/coin
 
+################################################################
 #配置redis
+################################################################
 # 声明缓存类型
 spring.cache.type=redis
 # redis缓存过期时间
