--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 ###############################################################
 #配置mongodb
 ################################################################
-spring.data.mongodb.uri=mongodb://localhost:27017/coin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=coin
 
 ################################################################
 #配置redis
