--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coin
+spring.data.mongodb.username=coin
+spring.data.mongodb.password=coin
+#给软工三那个服务器设置的root账户账号密码是 root 123456
 
 ################################################################
 #配置redis
