--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.redis.database=0
 spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
+
+################################################################
+server.port=8088
