--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>coin</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
