测试插入数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ###############################################################
 #配置mongodb
 ################################################################
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=111.229.244.48
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=coin
-#spring.data.mongodb.username=coin
-#spring.data.mongodb.password=coin
+spring.data.mongodb.username=coin
+spring.data.mongodb.password=coin
 #给软工三那个服务器设置的root账户账号密码是 root 123456
 
 ################################################################
