--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 ################################################################
 spring.data.mongodb.host=111.229.244.48
 spring.data.mongodb.port=27017
+#coin账户权限是readWrite
 spring.data.mongodb.database=coin
 spring.data.mongodb.username=coin
 spring.data.mongodb.password=coin
-#给软工三那个服务器设置的root账户账号密码是 root 123456
 
 ################################################################
 #配置redis
@@ -19,4 +19,7 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 
 ################################################################
+#端口
 server.port=8088
+
+rootDirPath=D:/Documents/Tencent Files/2506856189/FileRecv/训练集
