--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,13 @@
 			<version>2.8</version>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>com.hankcs</groupId>
+			<artifactId>hanlp</artifactId>
+			<version>portable-1.8.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/java/com/example/coin/lib/hanlp-1.8.1.jar</systemPath>
+		</dependency>
 
 	</dependencies>
 
