--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 			<artifactId>paranamer</artifactId>
 			<version>2.8</version>
 		</dependency>
-
+		<!--引入外部jar scope设置为system-->
 		<dependency>
 			<groupId>com.hankcs</groupId>
 			<artifactId>hanlp</artifactId>
@@ -107,6 +107,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--不添加这条configuration BOOT-INF中就不会有外部的那个jar包-->
 				<configuration>
 					<includeSystemScope>true</includeSystemScope>
 				</configuration>
