--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,18 +9,8 @@ spring.data.mongodb.username=coin
 spring.data.mongodb.password=coin
 
 ################################################################
-#配置redis
-################################################################
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器地址
-spring.redis.host=127.0.0.1
-# Redis服务器连接端口
-spring.redis.port=6379
-
-################################################################
 #端口
 server.port=8088
 
-rootDirPath=D:/data
-#rootDirPath=/root/data
+#rootDirPath=D:/data
+rootDirPath=/root/data
