--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 ###############################################################
 #配置mongodb
 ################################################################
-spring.data.mongodb.host=111.229.244.48
+spring.data.mongodb.host=127.0.0.1
+#默认端口是27017
 spring.data.mongodb.port=27017
-#coin账户权限是readWrite
-spring.data.mongodb.database=coin
-spring.data.mongodb.username=coin
-spring.data.mongodb.password=coin
+#数据库名称 自行修改
+spring.data.mongodb.database=yourdatabase
+#你的用户名 自行修改
+spring.data.mongodb.username=yourusername
+#密码 自行修改
+spring.data.mongodb.password=yourpassword
 
 ################################################################
 #端口
 server.port=8088
-
-#rootDirPath=D:/data
+#存储训练样本的路径
 rootDirPath=/root/data
